# pagestream

./: LICENSE  README.md  pyproject.toml
src/pagestream/: __init__.py  cli.py
